# advent-of-code-2020

./: .gitignore  Cargo.toml  time-tests.sh
puzzles/day00/: Cargo.toml
puzzles/day00/src/: lib.rs
puzzles/day01/: Cargo.toml
puzzles/day01/src/: imperative.rs  lib.rs
puzzles/day02/: Cargo.toml
puzzles/day02/src/: lib.rs
puzzles/day03/: Cargo.toml
puzzles/day03/src/: lib.rs
puzzles/day04/: Cargo.toml
puzzles/day04/src/: lib.rs
puzzles/day05/: Cargo.toml
puzzles/day05/src/: lib.rs
puzzles/day06/: Cargo.toml
puzzles/day06/src/: lib.rs
puzzles/day07/: Cargo.toml
puzzles/day07/src/: lib.rs
puzzles/day08/: Cargo.toml
puzzles/day08/src/: lib.rs
puzzles/day09/: Cargo.toml
puzzles/day09/src/: lib.rs
puzzles/day10/: Cargo.toml
puzzles/day10/src/: lib.rs
puzzles/day11/: Cargo.toml
puzzles/day11/src/: lib.rs
puzzles/day12/: Cargo.toml
puzzles/day12/src/: lib.rs  part_one.rs  part_two.rs
puzzles/day13/: Cargo.toml
puzzles/day13/src/: lib.rs
puzzles/day14/: Cargo.toml
puzzles/day14/src/: lib.rs
puzzles/day15/: Cargo.toml
puzzles/day15/src/: lib.rs
puzzles/day16/: Cargo.toml
puzzles/day16/src/: lib.rs
puzzles/day17/: Cargo.toml
puzzles/day17/src/: lib.rs
puzzles/day18/: Cargo.toml
puzzles/day18/src/: lib.rs
puzzles/day19/: Cargo.toml
puzzles/day20/: Cargo.toml
puzzles/day21/: Cargo.toml
puzzles/day22/: Cargo.toml
puzzles/day23/: Cargo.toml
puzzles/day24/: Cargo.toml
puzzles/day25/: Cargo.toml
puzzles/day25/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  prelude.rs  puzzle_input.rs
(+6 files in other folders)
