[package]
name = "shared"
version = "0.1.0"
authors = ["Dallon Feldner <dallon.feldner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
lazy_static = "1.4.0"
regex = "1"
anyhow = "1.0"
