[package]
name = "day25"
version = "0.1.0"
authors = ["Dallon Feldner <dallon.feldner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest= false

[dependencies]
shared = { path = "../../shared" }
rayon = "1.5.0"
